src/code-blocks/components/ChoiceGroup.css
.choice-group {
  position: relative;

  /* layout */
  --top-position: 10px;
  --border-color: hsl(0, 0%, 75%) hsl(0, 0%, 72%) hsl(0, 0%, 72%) hsl(0, 0%, 75%);

  .choice-group__selects {
    position: absolute;
    display: flex;
    flex-direction: row-reverse;
    gap: 2px;
    z-index: 3;
    top: var(--top-position);
    right: 42px;
  }

  .choice-select {
    background: #eee;
    font-size: 13.3333px;

    -webkit-user-select: none; /* Safari */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE/Edge legacy */
    user-select: none; /* Standard */

    border-radius: 5px;
    border-style: solid;
    border-color: var(--border-color);
  }

  .choice-select__list {
    position: relative;
    border-radius: 5px;
    border-color: var(--border-color);
    width: 100%;
    overflow: hidden;
    transition: top 180ms cubic-bezier(0.2, 0.9, 0.2, 1);
  }

  .choice-select__option {
    display: flex;
    white-space: nowrap;
    align-items: center;
    flex-wrap: nowrap;
    background: #fff;
    padding: 0 6px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    cursor: pointer;
    transition: background 120ms ease;
  }

  .choice-select[aria-expanded='false'] {
    overflow: hidden;
    border-width: 1px 2px 2px 1px;
  }

  .choice-select[aria-expanded='true'] {
    overflow: visible;
    border-width: 0;

    .choice-select__list {
      border-style: solid;
      border-width: 1px 2px 2px 1px;
    }
  }

  .choice-select__option:last-child {
    border-bottom: none;
  }

  .choice-select__option:hover {
    background: #f5f5f5;
  }

  .choice-select__option[aria-selected='true'] {
    background: #eee;
  }

  .choice-select__option[aria-disabled='true'] {
    color: #999;
    cursor: not-allowed;
    opacity: 0.8;
  }

  .hidden {
    display: none !important;
  }

  /* choice visibility logic */
  select:has(option:nth-of-type(1):not(:checked)) ~ .choice:nth-of-type(1),
  select:has(option:nth-of-type(2):not(:checked)) ~ .choice:nth-of-type(2),
  select:has(option:nth-of-type(3):not(:checked)) ~ .choice:nth-of-type(3),
  select:has(option:nth-of-type(4):not(:checked)) ~ .choice:nth-of-type(4),
  select:has(option:nth-of-type(5):not(:checked)) ~ .choice:nth-of-type(5),
  select:has(option:nth-of-type(6):not(:checked)) ~ .choice:nth-of-type(6),
  select:has(option:nth-of-type(7):not(:checked)) ~ .choice:nth-of-type(7) {
    display: none;
  }
}

